# magicoca

./: .gitignore  README.md  main.py  pyproject.toml
magicoca/: __init__.py  chan.py
tests/: test_chan.py  test_select.py
