[project]
name = "magicoca"
dynamic = ["version"]
description = "A communication library for Python"
authors = [
    { name = "snowykami", email = "snowykami@outlook.com" },
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
tag_filter = "v*"
tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'


[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "mypy>=1.11.2",
]
[tool.pdm]
distribution = true
